tests/dfrouter/errors/options_parsing/false_space2/options.dfrouter
--detector-files=input_detectors.det.xml --detectors-poi-output detectors.poi.xml --net-file=copy of net.net.xml
